$Id$

2003/10/30 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed memory leaks


===========================================================================
MARK: released gwenhywfar-0.9beta1 (2003/10/27)
===========================================================================


2003/10/27 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- improved API documentation


2003/10/25 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added call to binTypeWrite function in MessageEngine code
- improved trustlevel handling in msgengine


2003/10/24 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added dynamic mode to GWEN_BUFFER (in this mode more memeory is allocated
  as needed when writing to it)
- added new BufferedIO type which uses a GWEN_BUFFER for reading/writing


2003-10-20  Christian Stimming <stimming@tuhh.de>

	* src/parser/msgengine.c: Improve some signed/unsigned compiler
	warnings.


2003/10/20 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed a problem in MessageEngine: It now uses the correct path when
  looking up a predefined value (it finally works even with the special
  HBCI jobs containing <MESSAGE> tags)
- XML: Added type "GWEN_XMLNODE_PATH". This type stores a XML node path. It
  is used now by MessageEngine for <VALUE> lookups when creating a message
- MessageEngine: fixed a bug in value lookup code
- minor fixes


2003/10/19 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- minor fixes
- added function to XML module which allows copying properties from one
  node to another one
- this new function is now used by GWEN_MsgEngine__ListGroup when adding
  a node to the list of used nodes


2003-10-18  Christian Stimming  <stimming@tuhh.de>

	* Makefile.cvs: Add calling libtoolize.

