@@ -9,7 +9,7 @@ GWENHYFWAR_BUGREPORT_ADDR="<gwenhyfwar-bugs@libchipcard.de>"
 AC_PREREQ(2.57)
 AC_INIT
 AC_CANONICAL_TARGET([])
-AM_INIT_AUTOMAKE(Gwenhyfwar, 0.9)
+AM_INIT_AUTOMAKE(Gwenhyfwar, 0.9.1)
 AC_CONFIG_SRCDIR([src/gwenhyfwarapi.h])
 AC_CONFIG_HEADER([config.h])
 
@@ -21,9 +21,9 @@ AC_CONFIG_HEADER([config.h])
 GWENHYFWAR_VERSION_MAJOR=0
 GWENHYFWAR_VERSION_MINOR=9
 GWENHYFWAR_VERSION_PATCHLEVEL=1
-GWENHYFWAR_VERSION_BUILD=1
+GWENHYFWAR_VERSION_BUILD=2
 GWENHYFWAR_VERSION_TAG="CVS"
-GWENHYFWAR_VERSION_FULLSTRING="$GWENHYFWAR_VERSION_MAJOR.$GWENHYFWAR_VERSION_MINOR.$GWENHYFWAR_VERSION_PATCHLEVEL.$GWENHYFWAR_VERSION_BUILD($GWENHYFWAR_VERSION_TAG)"
+GWENHYFWAR_VERSION_FULL_STRING="$GWENHYFWAR_VERSION_MAJOR.$GWENHYFWAR_VERSION_MINOR.$GWENHYFWAR_VERSION_PATCHLEVEL.$GWENHYFWAR_VERSION_BUILD($GWENHYFWAR_VERSION_TAG)"
 GWENHYFWAR_VERSION_STRING="$GWENHYFWAR_VERSION_MAJOR.$GWENHYFWAR_VERSION_MINOR.$GWENHYFWAR_VERSION_PATCHLEVEL($GWENHYFWAR_VERSION_TAG)"
 
 AC_SUBST(GWENHYFWAR_VERSION_MAJOR)
@@ -31,15 +31,28 @@ AC_SUBST(GWENHYFWAR_VERSION_MINOR)
 AC_SUBST(GWENHYFWAR_VERSION_PATCHLEVEL)
 AC_SUBST(GWENHYFWAR_VERSION_BUILD)
 AC_SUBST(GWENHYFWAR_VERSION_TAG)
-AC_SUBST(GWENHYFWAR_VERSION_FULLSTRING)
+AC_SUBST(GWENHYFWAR_VERSION_FULL_STRING)
 AC_SUBST(GWENHYFWAR_VERSION_STRING)
+
+AC_DEFINE_UNQUOTED(GWENHYFWAR_VERSION_MAJOR,$GWENHYFWAR_VERSION_MAJOR, 
+                   [major version])
+AC_DEFINE_UNQUOTED(GWENHYFWAR_VERSION_MINOR,$GWENHYFWAR_VERSION_MINOR, 
+                   [minor version])
+AC_DEFINE_UNQUOTED(GWENHYFWAR_VERSION_PATCHLEVEL,$GWENHYFWAR_VERSION_PATCHLEVEL, 
+                   [patchlevel])
+AC_DEFINE_UNQUOTED(GWENHYFWAR_VERSION_BUILD,$GWENHYFWAR_VERSION_BUILD, [build])
+AC_DEFINE_UNQUOTED(GWENHYFWAR_VERSION_STRING,"$GWENHYFWAR_VERSION_STRING", 
+                   [version string])
+AC_DEFINE_UNQUOTED(GWENHYFWAR_VERSION_FULL_STRING,"$GWENHYFWAR_VERSION_FULL_STRING",
+                   [full version string])
+AC_DEFINE_UNQUOTED(GWENHYFWAR_VERSION_TAG,$GWENHYFWAR_VERSION_TAG, [tag])
 
 #
 # SO version
 #
-GWENHYFWAR_SO_CURRENT=0
-GWENHYFWAR_SO_REVISION=1
-GWENHYFWAR_SO_AGE=0
+GWENHYFWAR_SO_CURRENT=1
+GWENHYFWAR_SO_REVISION=0
+GWENHYFWAR_SO_AGE=1
 AC_SUBST(GWENHYFWAR_SO_CURRENT)
 AC_SUBST(GWENHYFWAR_SO_REVISION)
 AC_SUBST(GWENHYFWAR_SO_AGE)
