@@ -34,7 +34,7 @@
 #define GWENHYFWAR_VERSION_PATCHLEVEL @GWENHYFWAR_VERSION_PATCHLEVEL@
 #define GWENHYFWAR_VERSION_BUILD @GWENHYFWAR_VERSION_BUILD@
 #define GWENHYFWAR_VERSION_TAG "@GWENHYFWAR_VERSION_TAG@"
-#define GWENHYFWAR_VERSION_FULLSTRING "@GWENHYFWAR_VERSION_FULLSTRING@"
+#define GWENHYFWAR_VERSION_FULL_STRING "@GWENHYFWAR_VERSION_FULL_STRING@"
 #define GWENHYFWAR_VERSION_STRING "@GWENHYFWAR_VERSION_STRING@"
 
 
